packages/map-controls/src/searchControl.css
.leaflet-control-zoom.leaflet-bar.leaflet-control {
  pointer-events: all;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control.show-search-fields .results {
  display: block;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control.show-search-fields
  .search-field {
  display: block;
  width: 18.7rem;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control .results {
  position: absolute;
  left: 2rem;
  top: -50vh;
  height: 50vh;
  width: 20rem;
  color: #1abc9c;
  background-color: #293949;
  overflow-y: scroll;
  display: none;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control .results::-webkit-scrollbar {
  width: 15px !important;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control
  .results::-webkit-scrollbar-thumb {
  cursor: ns-resize;
}

.leaflet-control-zoom.leaflet-bar.leaflet-control .search-field {
  display: none;

  position: absolute;
  left: 2rem;
  top: 0;
  background-color: #23313f;
  color: #cadad7;
  border: 2px solid #1abc9c;
  padding: 4px;
}

.leaflet-control-zoom.leaflet-bar.leaflet-control ul {
  overflow: hidden;
  margin: 0;
  padding: 0;
  margin-left: 0.5rem;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control ul li a {
  background-color: #293949 !important;
  color: #cadad7 !important;
  display: inline-block;
  margin: 0;
  padding: 0;
  width: 100%;
  text-wrap: nowrap;
  text-align: left;
}
.leaflet-control-zoom.leaflet-bar.leaflet-control ul li a:hover {
  color: #1abc9c !important;
}

